--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             </form>
         </div>
         <div class="credits">
-            <p>*created and handeled by Rutul and Mitul</p>
+            <p>*created and handeled by Rutul, Prutha and Mitul</p>
         </div>
     </div>
 
